going 网络通信框架 v.0.0.1